# cmd/docs/v2/swagger.json
@@ -808,9 +808,9 @@
                 }
             }
         },
-        "/request/create": {
+        "/reservation/create": {
             "post": {
-                "description": "Parses the request body and creates a new lease request using the lessee ID from the JWT token.",
+                "description": "Parses the reservation body and creates a new lease reservation using the lessee ID from the JWT token.",
                 "consumes": [
                     "application/json"
                 ],
@@ -818,29 +818,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Request"
+                    "Reservation"
                 ],
-                "summary": "Create a New Lease Request",
+                "summary": "Create a New Lease Reservation",
                 "parameters": [
                     {
-                        "description": "Lease Request Data",
-                        "name": "request",
+                        "description": "Lease Reservation Data",
+                        "name": "reservation",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.CreateRequest"
+                            "$ref": "#/definitions/dtos.CreateReservation"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Request created successfully",
+                        "description": "Reservation created successfully",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "400": {
-                        "description": "Failed to parse request body",
+                        "description": "Failed to parse reservation body",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
@@ -854,9 +854,9 @@
                 }
             }
         },
-        "/requests/delete/{id}": {
+        "/reservations/delete/{id}": {
             "delete": {
-                "description": "Deletes a lease request using the request ID provided in the URL.",
+                "description": "Deletes a lease reservation using the reservation ID provided in the URL.",
                 "consumes": [
                     "application/json"
                 ],
@@ -864,13 +864,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Request"
+                    "Reservation"
                 ],
-                "summary": "Delete a Lease Request",
+                "summary": "Delete a Lease Reservation",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Request ID",
+                        "description": "Reservation ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -878,19 +878,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Request deleted successfully",
+                        "description": "Reservation deleted successfully",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "400": {
-                        "description": "Invalid request ID",
+                        "description": "Invalid reservation ID",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "404": {
-                        "description": "Request not found",
+                        "description": "Reservation not found",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
@@ -904,9 +904,9 @@
                 }
             }
         },
-        "/requests/update/{id}": {
+        "/reservations/update/{id}": {
             "put": {
-                "description": "Parses the request body and updates an existing lease request identified by its ID.",
+                "description": "Parses the reservation body and updates an existing lease reservation identified by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -914,42 +914,101 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Request"
+                    "Reservation"
                 ],
-                "summary": "Update an Existing Lease Request",
+                "summary": "Update an Existing Lease Reservation",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Request ID",
+                        "description": "Reservation ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Lease Request Update Data",
-                        "name": "request",
+                        "description": "Lease Reservation Update Data",
+                        "name": "reservation",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.UpdateRequest"
+                            "$ref": "#/definitions/dtos.UpdateReservation"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Request updated successfully",
+                        "description": "Reservation updated successfully",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "400": {
-                        "description": "Failed to parse request body or invalid request ID",
+                        "description": "Failed to parse reservation body or invalid reservation ID",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "404": {
-                        "description": "Request not found",
+                        "description": "Reservation not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations/{id}": {
+            "put": {
+                "description": "Approves a lease reservation using the reservation ID provided in the URL.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reservation"
+                ],
+                "summary": "Approve a Lease Reservation",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Reservation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Reservation Status",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ApproveReservation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Reservation approved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid reservation ID",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Reservation not found",
                         "schema": {
                             "$ref": "#/definitions/utils.Response"
                         }
@@ -965,7 +1024,16 @@
         }
     },
     "definitions": {
-        "dtos.CreateRequest": {
+        "dtos.ApproveReservation": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "example": "approved"
+                }
+            }
+        },
+        "dtos.CreateReservation": {
             "type": "object",
             "properties": {
                 "interestedProperty": {
@@ -1038,6 +1106,12 @@
                     "description": "Number of reviews",
                     "type": "integer",
                     "example": 12
+                },
+                "review_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "size": {
                     "description": "property's size",
@@ -1131,12 +1205,13 @@
             ],
             "properties": {
                 "email": {
+                    "description": "user's email",
                     "type": "string",
-                    "example": "prix.noti@gmail.com"
+                    "example": "john.doe@example.com"
                 }
             }
         },
-        "dtos.UpdateRequest": {
+        "dtos.UpdateReservation": {
             "type": "object",
             "properties": {
                 "proposedMessage": {
@@ -1161,10 +1236,12 @@
             ],
             "properties": {
                 "email": {
+                    "description": "user's email",
                     "type": "string",
-                    "example": "prix.noti@gmail.com"
+                    "example": "john.doe@example.com"
                 },
                 "otp": {
+                    "description": "user's OTP",
                     "type": "string",
                     "example": "123456"
                 }
