# internal/handlers/handler.go
@@ -3,6 +3,6 @@ package handlers
 type Handler interface {
 	Property() *propertyHandler
 	Auth() *authHandler
-	Request() *requestHandler
+	Reservation() *reservationHandler
 	Review() *reviewHandler
 }
