# internal/repositories/request.go
@@ -1,9 +1,0 @@
-package repositories
-
-import "LeaseEase/internal/models"
-
-type RequestRepository interface {
-	CreateRequest(request *models.Request) error
-	UpdateRequest(request *models.Request) error
-	DeleteRequest(requestID uint) error
-}
