# internal/services/request.go
@@ -1,9 +1,0 @@
-package services
-
-import "LeaseEase/internal/dtos"
-
-type RequestService interface {
-	CreateRequest(requestDTO *dtos.CreateRequest , lesseeId uint) error
-	UpdateRequest(requestDTO *dtos.UpdateRequest, requestID uint) error
-	DeleteRequest(requestID uint) error
-}
